# harness_observability_layer

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: agent-observability-project.md  metrics-expansion-design.md  multi-harness-adaptation-plan.md  pypi-release-process.md  release-hardening-checklist.md  security-and-privacy-review-plan.md  security-audit-inventory.md
docs/superpowers/specs/: 2026-04-19-session-guided-reporting-design.md
examples/: mock_session.py
examples/sample_repo/: app.py
scripts/: import_all_codex_sessions.py  import_codex_session.py  import_latest_codex_session.py  run_codex_observed.py
src/adapters/: __init__.py  file_tools.py  shell_tools.py  skill_loader.py
src/harness/: __init__.py  runner.py  skill_registry.py  tool_registry.py
src/harness_observability_layer/: __init__.py  __main__.py  security.py  server.py
src/harness_observability_layer/cli/: __init__.py  main.py
src/harness_observability_layer/integrations/: __init__.py  claude_code_jsonl.py  codex_exec.py  codex_jsonl.py
src/harness_observability_layer/observer/: __init__.py  analyzer.py  attribution.py  events.py  logger.py  metrics.py  normalizers.py  schemas.py
src/harness_observability_layer/plugin/: __init__.py  api.py
src/harness_observability_layer/reporting/: __init__.py  guided_insights.py  guided_site.py  html_report.py  markdown_report.py  project_aggregate.py  project_dashboard.py  session_artifacts.py  session_dashboard.py  session_index.py  session_metadata.py  text_report.py
src/integrations/: __init__.py  claude_code_jsonl.py  codex_exec.py  codex_jsonl.py
src/observer/: __init__.py  analyzer.py  events.py  metrics.py  normalizers.py  schemas.py
src/reporting/: __init__.py  html_report.py  session_artifacts.py  session_index.py  session_metadata.py
tests/: test_claude_code_jsonl.py  test_codex_token_metrics.py  test_guided_reporting.py  test_release_surface.py  test_security_privacy.py  test_skill_attribution_metrics.py
