[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-observability-layer"
version = "0.1.0"
description = "Observability tooling for agent harness sessions, imports, and reports."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Alexandre Lira" },
]
dependencies = []

[project.scripts]
hol = "harness_observability_layer.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

